Update .po files

--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-08 17:12+0000\n"
 "PO-Revision-Date: 2022-02-04 17:03+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -202,7 +202,7 @@ msgstr "またはネイティブの場合、"
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:115
 #, no-wrap
-msgid "quarkus.buildpack.jvm-builder-image=<native builder image>\n"
+msgid "quarkus.buildpack.native-builder-image=<native builder image>\n"
 msgstr ""
 
 #. type: Title ==
