--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-02-08 17:12+0000\n"
 "PO-Revision-Date: 2021-03-22 10:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -650,29 +650,81 @@ msgstr ""
 #. type: Title ==
 #: upstream/_guides/grpc-service-implementation.adoc:331
 #, fuzzy, no-wrap
+msgid "Trying out your services manually"
+msgstr "サービスのテスト"
+
+#. type: Plain text
+#: upstream/_guides/grpc-service-implementation.adoc:334
+msgid "In the dev mode, you can try out your gRPC services in the Quarkus Dev UI.  Just go to http://localhost:8080/q/dev and click on _Services_ under the gRPC tile."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/grpc-service-implementation.adoc:336
+msgid "Please note that your application needs to expose the \"normal\" HTTP port for the Dev UI to be accessible. If your application does not expose any HTTP endpoints, you can create a dedicated profile with a dependency on `quarkus-vertx-http`:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/grpc-service-implementation.adoc:349
+#, no-wrap
+msgid ""
+"    <profiles>\n"
+"        <profile>\n"
+"            <id>development</id>\n"
+"            <dependencies>\n"
+"                <dependency>\n"
+"                    <groupId>io.quarkus</groupId>\n"
+"                    <artifactId>quarkus-vertx-http</artifactId>\n"
+"                </dependency>\n"
+"            </dependencies>\n"
+"        </profiles>\n"
+"    </profile>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/grpc-service-implementation.adoc:351
+msgid "Having it, you can run the dev mode with: `mvn quarkus:dev -Pdevelopment`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/grpc-service-implementation.adoc:353
+msgid "If you use Gradle, you can simply add a dependency for the `quarkusDev` task:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/grpc-service-implementation.adoc:359
+#, no-wrap
+msgid ""
+"dependencies {\n"
+"    quarkusDev 'io.quarkus:quarkus-vertx-http'\n"
+"}\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_guides/grpc-service-implementation.adoc:361
+#, fuzzy, no-wrap
 msgid "gRPC Server metrics"
 msgstr "gRPCサーバーのメトリクス"
 
 #. type: Title ===
-#: upstream/_guides/grpc-service-implementation.adoc:333
+#: upstream/_guides/grpc-service-implementation.adoc:363
 #, fuzzy, no-wrap
 msgid "Enabling metrics collection"
 msgstr "メトリクスの収集を可能にする"
 
 #. type: Plain text
-#: upstream/_guides/grpc-service-implementation.adoc:337
+#: upstream/_guides/grpc-service-implementation.adoc:367
 #, fuzzy
 msgid "gRPC server metrics are automatically enabled when the application also uses the xref:micrometer.adoc[`quarkus-micrometer`] extension.  Micrometer collects the metrics of all the gRPC services implemented by the application."
 msgstr "アプリケーションがエクステンションを使用している場合、gRPCサーバーメトリクスが自動的に有効になります。  link:micrometer.html[`quarkus-micrometer`]エクステンションです。Micrometerは、アプリケーションが実装するすべてのgRPCサービスのメトリクスを収集します。"
 
 #. type: Plain text
-#: upstream/_guides/grpc-service-implementation.adoc:339
+#: upstream/_guides/grpc-service-implementation.adoc:369
 #, fuzzy
 msgid "As an example, if you export the metrics to Prometheus, you will get:"
 msgstr "例として、メトリクスをPrometheusにエクスポートすると、以下のようになります。"
 
 #. type: delimited block -
-#: upstream/_guides/grpc-service-implementation.adoc:355
+#: upstream/_guides/grpc-service-implementation.adoc:385
 #, no-wrap
 msgid ""
 "# HELP grpc_server_responses_sent_messages_total The total number of responses sent\n"
@@ -691,25 +743,25 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_guides/grpc-service-implementation.adoc:358
+#: upstream/_guides/grpc-service-implementation.adoc:388
 #, fuzzy
 msgid "The service name, method and type can be found in the _tags_."
 msgstr "サービス名、方法、タイプは _タグ_で確認できます。"
 
 #. type: Title ===
-#: upstream/_guides/grpc-service-implementation.adoc:359
+#: upstream/_guides/grpc-service-implementation.adoc:389
 #, fuzzy, no-wrap
 msgid "Disabling metrics collection"
 msgstr "メトリクス収集の無効化"
 
 #. type: Plain text
-#: upstream/_guides/grpc-service-implementation.adoc:362
+#: upstream/_guides/grpc-service-implementation.adoc:392
 #, fuzzy
 msgid "To disable the gRPC server metrics when `quarkus-micrometer` is used, add the following property to the application configuration:"
 msgstr "`quarkus-micrometer` を使用しているときに gRPC サーバーメトリクスを無効にするには、アプリケーションの設定に以下のプロパティを追加します。"
 
 #. type: delimited block -
-#: upstream/_guides/grpc-service-implementation.adoc:366
+#: upstream/_guides/grpc-service-implementation.adoc:396
 #, no-wrap
 msgid "quarkus.micrometer.binder.grpc-server.enabled=false\n"
 msgstr ""
