--- a/l10n/po/ja_JP/_guides/native-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-08 17:12+0000\n"
 "PO-Revision-Date: 2022-02-05 10:21+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -493,10 +493,18 @@ msgstr ""
 msgid "Once the import completes (shouldn't take more than a couple of minutes), go to the Neo4j browser, and you'll be able to observe a small summary of the data in the graph:"
 msgstr "インポートが完了したら（数分以上はかからないはず）、Neo4jブラウザにアクセスして、データの小さなサマリーをグラフで見ることができます。"
 
-#. type: Plain text
-#: upstream/_guides/native-reference.adoc:299
-msgid "image:native-reference-neo4j-db-info.png[Neo4j database information after import]"
+#. type: Positional ($1) AttributeList argument for macro 'image'
+#: upstream/_guides/native-reference.adoc:298
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-neo4j-db-info.png[Neo4j database information after import]"
+msgid "Neo4j database information after import"
 msgstr "image:native-reference-neo4j-db-info.png[Neo4j database information after import]"
+
+#. type: Target for macro image
+#: upstream/_guides/native-reference.adoc:298
+#, no-wrap
+msgid "native-reference-neo4j-db-info.png"
+msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:303
@@ -1025,9 +1033,17 @@ msgstr ""
 msgid "The flame graph is an svg file that a web browser, such as Firefox, can easily display.  After the above two commands complete one can open `flamegraph.svg` in their browser:"
 msgstr "フレームグラフは、FirefoxなどのWebブラウザで簡単に表示できるsvgファイルです。上記の2つのコマンドが完了すると、ブラウザで `flamegraph.svg` を開くことができます。"
 
-#. type: Plain text
-#: upstream/_guides/native-reference.adoc:665
-msgid "image:native-reference-perf-flamegraph-no-symbols.png[Perf flamegraph without symbols]"
+#. type: Positional ($1) AttributeList argument for macro 'image'
+#: upstream/_guides/native-reference.adoc:664
+#, no-wrap
+msgid "Perf flamegraph without symbols"
+msgstr ""
+
+#. type: Target for macro image
+#: upstream/_guides/native-reference.adoc:664
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-perf-flamegraph-no-symbols.png[Perf flamegraph without symbols]"
+msgid "native-reference-perf-flamegraph-no-symbols.png"
 msgstr "image:native-reference-perf-flamegraph-no-symbols.png[Perf flamegraph without symbols]"
 
 #. type: Plain text
@@ -1116,9 +1132,17 @@ msgstr ""
 msgid "The flamegraph now shows where the bottleneck is.  It's when `StringBuilder.delete()` is called which calls `System.arraycopy()`.  The issue is that 1 million characters need to be shifted in very small increments:"
 msgstr "フレームグラフを見ると、どこがボトルネックになっているかがわかります。それは、 `StringBuilder.delete()` が呼び出され、 `System.arraycopy()` を呼び出すときです。問題は、100万文字を非常に小さな単位でシフトさせる必要があることです。"
 
-#. type: Plain text
-#: upstream/_guides/native-reference.adoc:728
-msgid "image:native-reference-perf-flamegraph-symbols.png[Perf flamegraph with symbols]"
+#. type: Positional ($1) AttributeList argument for macro 'image'
+#: upstream/_guides/native-reference.adoc:727
+#, no-wrap
+msgid "Perf flamegraph with symbols"
+msgstr ""
+
+#. type: Target for macro image
+#: upstream/_guides/native-reference.adoc:727
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-perf-flamegraph-symbols.png[Perf flamegraph with symbols]"
+msgid "native-reference-perf-flamegraph-symbols.png"
 msgstr "image:native-reference-perf-flamegraph-symbols.png[Perf flamegraph with symbols]"
 
 #. type: Title ===
@@ -1255,9 +1279,18 @@ msgstr "`perf` を介して実行してください。"
 msgid "Make and open a flamegraph:"
 msgstr "フレームグラフを作成して開いてください。"
 
-#. type: Plain text
-#: upstream/_guides/native-reference.adoc:829
-msgid "image:native-reference-multi-flamegraph-separate-threads.png[Muti-thread perf flamegraph with separate threads]"
+#. type: Positional ($1) AttributeList argument for macro 'image'
+#: upstream/_guides/native-reference.adoc:828
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-multi-flamegraph-separate-threads.png[Muti-thread perf flamegraph with separate threads]"
+msgid "Muti-thread perf flamegraph with separate threads"
+msgstr "image:native-reference-multi-flamegraph-separate-threads.png[Muti-thread perf flamegraph with separate threads]"
+
+#. type: Target for macro image
+#: upstream/_guides/native-reference.adoc:828
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-multi-flamegraph-separate-threads.png[Muti-thread perf flamegraph with separate threads]"
+msgid "native-reference-multi-flamegraph-separate-threads.png"
 msgstr "image:native-reference-multi-flamegraph-separate-threads.png[Muti-thread perf flamegraph with separate threads]"
 
 #. type: Plain text
@@ -1297,9 +1330,18 @@ msgid ""
 "${FG_HOME}/flamegraph.pl out.perf-folded > flamegraph.svg\n"
 msgstr ""
 
-#. type: Plain text
-#: upstream/_guides/native-reference.adoc:858
-msgid "image:native-reference-multi-flamegraph-joined-threads.png[Muti-thread perf flamegraph with joined threads]"
+#. type: Positional ($1) AttributeList argument for macro 'image'
+#: upstream/_guides/native-reference.adoc:857
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-multi-flamegraph-joined-threads.png[Muti-thread perf flamegraph with joined threads]"
+msgid "Muti-thread perf flamegraph with joined threads"
+msgstr "image:native-reference-multi-flamegraph-joined-threads.png[Muti-thread perf flamegraph with joined threads]"
+
+#. type: Target for macro image
+#: upstream/_guides/native-reference.adoc:857
+#, fuzzy, no-wrap
+#| msgid "image:native-reference-multi-flamegraph-joined-threads.png[Muti-thread perf flamegraph with joined threads]"
+msgid "native-reference-multi-flamegraph-joined-threads.png"
 msgstr "image:native-reference-multi-flamegraph-joined-threads.png[Muti-thread perf flamegraph with joined threads]"
 
 #. type: Plain text
