--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-08 17:12+0000\n"
 "PO-Revision-Date: 2021-04-30 16:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -39,7 +39,7 @@ msgstr "`quarkus-oidc-client`, `quarkus-oidc-client-reactive-filter`, `quarkus-o
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:15
 #, fuzzy
-msgid "`quarkus-oidc-token-propagation` extension to propagate the current `Bearer` or `Authorization Code Flow` access tokens"
+msgid "`quarkus-oidc-token-propagation` and `quarkus-oidc-token-propagation-reactive` extensions to propagate the current `Bearer` or `Authorization Code Flow` access tokens"
 msgstr "`quarkus-oidc-token-propagation` 現在の `Bearer` または `Authorization Code Flow` のアクセストークンを伝搬させるためのエクステンション"
 
 #. type: Plain text
@@ -722,6 +722,7 @@ msgstr "RestClientのReactive ClientFilterでのOidcClientの使用"
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:365
 #: upstream/_guides/security-openid-connect-client.adoc:406
+#: upstream/_guides/security-openid-connect-client.adoc:938
 #, fuzzy
 msgid "Add the following Maven Dependency:"
 msgstr "テストプロジェクトに以下の依存関係を追加します。"
@@ -1848,24 +1849,52 @@ msgid "You can generate the tokens as described in xref:security-openid-connect.
 msgstr "RESTテストエンドポイントを用意します。注入されたMP RESTクライアントを登録されたOidcClientフィルターで使用するテスト用フロントエンドエンドポイントが、トークンをエコーバックするダウンストリームエンドポイントを呼び出すことができます。例として、 `main` Quarkusリポジトリの `integration-tests/oidc-client-wiremock` を参照してください。"
 
 #. type: Title ==
-#: upstream/_guides/security-openid-connect-client.adoc:934
+#: upstream/_guides/security-openid-connect-client.adoc:935
+#, fuzzy, no-wrap
+#| msgid "Token Propagation"
+msgid "Token Propagation Reactive"
+msgstr "トークンの伝播"
+
+#. type: delimited block -
+#: upstream/_guides/security-openid-connect-client.adoc:945
+#, no-wrap
+msgid ""
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-oidc-token-propagation-reactive</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_guides/security-openid-connect-client.adoc:948
+#, fuzzy
+msgid "The `quarkus-oidc-token-propagation-reactive` extension provides `io.quarkus.oidc.token.propagation.reactive.AccessTokenRequestReactiveFilter` which can be used to propagate the current `Bearer` or `Authorization Code Flow` access tokens."
+msgstr "`quarkus-oidc-token-propagation` 現在の `Bearer` または `Authorization Code Flow` のアクセストークンを伝搬させるためのエクステンション"
+
+#. type: Plain text
+#: upstream/_guides/security-openid-connect-client.adoc:951
+msgid "The `quarkus-oidc-token-propagation-reactive` extension (as opposed to the non-reactive `quarkus-oidc-token-propagation` extension) does not currently support the exchanging or resigning the tokens before the propagation.  However these features may be added in the future."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_guides/security-openid-connect-client.adoc:952
 #, no-wrap
 msgid "References"
 msgstr "参照"
 
 #. type: Plain text
-#: upstream/_guides/security-openid-connect-client.adoc:937
+#: upstream/_guides/security-openid-connect-client.adoc:955
 msgid "xref:security.adoc[Quarkus Security]"
 msgstr "xref:security.adoc[Quarkus Security]"
 
 #. type: Plain text
-#: upstream/_guides/security-openid-connect-client.adoc:938
+#: upstream/_guides/security-openid-connect-client.adoc:956
 #, fuzzy
 msgid "xref:security-openid-connect.adoc[Quarkus - Using OpenID Connect to Protect Service Applications using Bearer Token Authorization]"
 msgstr "link:security-openid-connect.html[Quarkus - OpenID Connectを使用したベアラートークン認証によるサービスアプリケーションの保護]"
 
 #. type: Plain text
-#: upstream/_guides/security-openid-connect-client.adoc:938
+#: upstream/_guides/security-openid-connect-client.adoc:956
 #, fuzzy
 msgid "xref:security-openid-connect-web-authentication.adoc[Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow]"
 msgstr "link:security-openid-connect-web-authentication.html[Quarkus - OpenID Connectを使用した認証コードフローによるWebアプリケーションの保護]"
