--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-container-image-jib.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-02 14:09+0000\n"
+"POT-Creation-Date: 2022-02-08 17:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17:1.11` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11:1.11` is used as the default.\n"
+"The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17-runtime:1.11` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11-runtime:1.11` is used as the default.\n"
 "--"
 msgstr ""
 
@@ -245,20 +245,20 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"List of target platforms. Each platform is defined using the pattern: ++\\++++\\"
+"List of target platforms. Each platform is defined using the pattern:  `<os>++\\"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:119
 #, no-wrap
-msgid "\\++++[++/variant++]\\"
+msgid "++<arch>++[++/variant++]\\"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:120
 #, no-wrap
 msgid ""
-"\\++/++\\++++[++/variant++]++ ex: linux/amd64,linux/arm64/v8. If not specified, OS default is linux and architecture default is amd64 If more than one platform is configured, it is important to note that the base image has to be a Docker manifest or an OCI image index containing a version of each chosen platform It doesn't work with native images, as cross-compilation is not supported Target Platform is a incubating feature of Jib. See link:https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#how-do-i-specify-a-platform-in-the-manifest-list-or-oci-index-of-a-base-image[Jib FAQ] for more information\n"
+"++<os>/<arch>++[++/variant++]++`  for example: `linux/amd64,linux/arm64/v8`  If not specified, OS default is linux and architecture default is amd64 If more than one platform is configured, it is important to note that the base image has to be a Docker manifest or an OCI image index containing a version of each chosen platform It doesn't work with native images, as cross-compilation is not supported Target Platform is a incubating feature of Jib. See link:https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#how-do-i-specify-a-platform-in-the-manifest-list-or-oci-index-of-a-base-image[Jib FAQ] for more information\n"
 "--"
 msgstr ""
 
