Apply translation memory

--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -176,7 +176,7 @@ msgstr ""
 #: upstream/_guides/optaplanner.adoc:72 upstream/_guides/optaplanner.adoc:726
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/optaplanner.adoc:109
@@ -235,7 +235,7 @@ msgstr ""
 #: upstream/_guides/optaplanner.adoc:119 upstream/_guides/optaplanner.adoc:736
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/optaplanner.adoc:128
