--- a/l10n/po/ja_JP/_guides/quartz.adoc.po
+++ b/l10n/po/ja_JP/_guides/quartz.adoc.po
@@ -131,7 +131,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/quartz.adoc:62
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:68
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_guides/quartz.adoc:71
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/quartz.adoc:74
@@ -789,12 +789,12 @@ msgstr "`./mvnw quarkus:dev` でアプリケーションを実行します。数
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:387
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:391
 msgid "and executed with `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして次のコマンドで実行できます。 `java -jar target/quarkus-app/quarkus-run.jar`."
 
 #. type: Plain text
 #: upstream/_guides/quartz.adoc:393 upstream/_guides/quartz.adoc:414
