--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -87,7 +87,7 @@ msgstr "`pom.xml` ファイルに以下を追加します。"
 #: upstream/_guides/reactive-routes.adoc:697
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:48
@@ -104,7 +104,7 @@ msgstr ""
 #: upstream/_guides/reactive-routes.adoc:706
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:54
