--- a/l10n/po/ja_JP/_guides/redis.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis.adoc.po
@@ -112,7 +112,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/redis.adoc:56
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/redis.adoc:62
@@ -128,7 +128,7 @@ msgstr ""
 #: upstream/_guides/redis.adoc:65
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/redis.adoc:68
