--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -71,7 +71,7 @@ msgstr "`pom.xml` ファイルに以下のインポートを追加します。"
 #: upstream/_guides/resteasy-reactive.adoc:39
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/resteasy-reactive.adoc:45
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive.adoc:48
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/resteasy-reactive.adoc:51
