--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:19
@@ -59,13 +59,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:32
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:23
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc:31
