--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -103,7 +103,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_guides/rest-client.adoc:50 upstream/_guides/rest-client.adoc:639
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:60
@@ -123,7 +123,7 @@ msgstr ""
 #: upstream/_guides/rest-client.adoc:63 upstream/_guides/rest-client.adoc:650
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client.adoc:67
@@ -892,7 +892,7 @@ msgstr "REST Client extensionに関する基本情報を含む JSON オブジェ
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:597
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:601
@@ -902,7 +902,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:603
 msgid "You can also generate the native executable with:"
-msgstr ""
+msgstr "次のようにネイティブ実行可能ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client.adoc:606
