Add machine translation

--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -655,13 +655,15 @@ msgstr "サービスのテスト"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:334
+#, fuzzy
 msgid "In the dev mode, you can try out your gRPC services in the Quarkus Dev UI.  Just go to http://localhost:8080/q/dev and click on _Services_ under the gRPC tile."
-msgstr ""
+msgstr "開発モードでは、Quarkus Dev UIでgRPCサービスを試すことができます。 http://localhost:8080/q/dev 、gRPCタイルの下にある _「サービス_」をクリックするだけです。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:336
+#, fuzzy
 msgid "Please note that your application needs to expose the \"normal\" HTTP port for the Dev UI to be accessible. If your application does not expose any HTTP endpoints, you can create a dedicated profile with a dependency on `quarkus-vertx-http`:"
-msgstr ""
+msgstr "Dev UIにアクセスするには、アプリケーションが「通常の」HTTPポートを公開する必要があることに注意してください。アプリケーションがHTTPエンドポイントを公開していない場合は、 `quarkus-vertx-http` に依存する専用のプロファイルを作成することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:349
@@ -682,13 +684,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:351
+#, fuzzy
 msgid "Having it, you can run the dev mode with: `mvn quarkus:dev -Pdevelopment`."
-msgstr ""
+msgstr "これがあれば、次のようにして開発モードを実行できます： `mvn quarkus:dev -Pdevelopment`."
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:353
+#, fuzzy
 msgid "If you use Gradle, you can simply add a dependency for the `quarkusDev` task:"
-msgstr ""
+msgstr "Gradleを使用している場合は、 `quarkusDev` タスクの依存関係を追加するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:359
