--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -60,14 +60,14 @@ msgstr "JAX-RS で Hello World"
 #. type: Plain text
 #: upstream/_guides/qute.adoc:29
 #, fuzzy
-#| msgid "If you want to use Qute in your JAX-RS application, you need to add the `quarkus-resteasy-qute` extension first.  In your `pom.xml` file, add:"
 msgid "If you want to use Qute in your JAX-RS application, you need to add an extension first:"
 msgstr "JAX-RS アプリケーションで Qute を使用する場合は、まず `quarkus-resteasy-qute` のエクステンションを追加する必要があります。 `pom.xml` ファイルに以下を追加します:"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:31
+#, fuzzy
 msgid "either `quarkus-resteasy-qute` if you are using RESTEasy Classic:"
-msgstr ""
+msgstr "RESTEasy Classicを使用している場合は、 `quarkus-resteasy-qute` のいずれかです。"
 
 #. type: Block title
 #: upstream/_guides/qute.adoc:33 upstream/_guides/qute.adoc:50
@@ -99,8 +99,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:48
+#, fuzzy
 msgid "or `quarkus-resteasy-reactive-qute` if you are using RESTEasy Reactive:"
-msgstr ""
+msgstr "または、RESTEasy Reactive を使用している場合は `quarkus-resteasy-reactive-qute` 。"
 
 #. type: delimited block -
 #: upstream/_guides/qute.adoc:56
