--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -426,14 +426,12 @@ msgstr "この設定は、あらゆる種類のSSL検証を無効にするため
 #. type: Title ==
 #: upstream/_guides/rest-client.adoc:240
 #, fuzzy, no-wrap
-#| msgid "Update the JAX-RS resource"
 msgid "Create the JAX-RS resource"
 msgstr "JAX-RSリソースの更新"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:243
 #, fuzzy
-#| msgid "Open the `src/main/java/org/acme/rest/client/ExtensionsResource.java` file and update it with the following content:"
 msgid "Create the `src/main/java/org/acme/rest/client/ExtensionsResource.java` file with the following content:"
 msgstr "`src/main/java/org/acme/rest/client/ExtensionsResource.java` ファイルを開き、以下の内容で更新してください。"
 
@@ -873,14 +871,12 @@ msgstr "アプリケーションをパッケージ化して実行する"
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:589
 #, fuzzy
-#| msgid "Package and run the application"
 msgid "Run the application with:"
 msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:593
 #, fuzzy
-#| msgid "Run the application with: `./mvnw compile quarkus:dev`.  Open your browser to http://localhost:8080/extension/id/io.quarkus:quarkus-rest-client."
 msgid "Open your browser to http://localhost:8080/extension/id/io.quarkus:quarkus-rest-client."
 msgstr "`./mvnw compile quarkus:dev` でアプリケーションを実行します。ブラウザで http://localhost:8080/extension/id/io.quarkus:quarkus-rest-client を開きます。"
 
@@ -896,8 +892,9 @@ msgstr "いつものように、アプリケーションは以下の方法でパ
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:601
+#, fuzzy
 msgid "And executed with `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして、 `java -jar target/quarkus-app/quarkus-run.jar` で実行しました。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:603
