--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -1851,7 +1851,6 @@ msgstr "RESTテストエンドポイントを用意します。注入されたMP
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-client.adoc:935
 #, fuzzy, no-wrap
-#| msgid "Token Propagation"
 msgid "Token Propagation Reactive"
 msgstr "トークンの伝播"
 
@@ -1873,8 +1872,9 @@ msgstr "`quarkus-oidc-token-propagation` 現在の `Bearer` または `Authoriza
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:951
+#, fuzzy
 msgid "The `quarkus-oidc-token-propagation-reactive` extension (as opposed to the non-reactive `quarkus-oidc-token-propagation` extension) does not currently support the exchanging or resigning the tokens before the propagation.  However these features may be added in the future."
-msgstr ""
+msgstr "`quarkus-oidc-token-propagation-reactive` 拡張機能（非反応性の `quarkus-oidc-token-propagation` 拡張機能とは対照的に）は、現在のところ、伝播の前にトークンを交換したり辞めたりすることをサポートしていません。しかし、これらの機能は将来的に追加される可能性があります。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-client.adoc:952
