--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -55,7 +55,6 @@ msgstr "このガイドでは、カウンタの現在値を取得するために
 #. type: Target for macro image
 #: upstream/_guides/scheduler.adoc:24
 #, fuzzy, no-wrap
-#| msgid "image:scheduling-task-architecture.png[alt=Architecture]"
 msgid "scheduling-task-architecture.png"
 msgstr "image:scheduling-task-architecture.png[alt=Architecture]"
 
@@ -93,8 +92,9 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:44
+#, fuzzy
 msgid "It generates a new project including:"
-msgstr ""
+msgstr "を含む新しいプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:46
@@ -114,7 +114,6 @@ msgstr "アプリケーション設定ファイル"
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:50
 #, fuzzy
-#| msgid "The Maven project also imports the Quarkus scheduler extension."
 msgid "The project also imports the RESTEasy and scheduler extensions."
 msgstr "Maven プロジェクトは、Quarkus scheduler エクステンションもインポートします。"
 
@@ -126,7 +125,6 @@ msgstr "すでに Quarkus プロジェクトが設定されている場合は、
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:58
 #, fuzzy
-#| msgid "This will add the following to your `pom.xml`:"
 msgid "This will add the following to your build file:"
 msgstr "これにより、 `pom.xml` に以下が追加されます。"
 
@@ -295,14 +293,12 @@ msgstr ""
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:135
 #, fuzzy, no-wrap
-#| msgid "Creating the Maven project"
 msgid "Creating the REST resource"
 msgstr "Maven プロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:138
 #, fuzzy
-#| msgid "Edit the `CountResource` class, and update the content to:"
 msgid "Create the `CountResource` class as follows:"
 msgstr "`CountResource` クラスを編集して、内容を更新します。"
 
@@ -364,14 +360,12 @@ msgstr "アプリケーションのパッケージ化と実行"
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:169
 #, fuzzy
-#| msgid "Package and run the application"
 msgid "Run the application with:"
 msgstr "アプリケーションのパッケージ化と実行"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:174
 #, fuzzy
-#| msgid "Run the application with: `./mvnw compile quarkus:dev`.  In another terminal, run `curl localhost:8080/count` to check the counter value.  After a few seconds, re-run `curl localhost:8080/count` to verify the counter has been incremented."
 msgid "In another terminal, run `curl localhost:8080/count` to check the counter value.  After a few seconds, re-run `curl localhost:8080/count` to verify the counter has been incremented."
 msgstr "`./mvnw compile quarkus:dev` でアプリケーションを実行してください。別のターミナルで `curl localhost:8080/count` を実行して、カウンターの値を確認します。数秒後に `curl localhost:8080/count` を再実行して、カウンターがインクリメントされていることを確認します。"
 
@@ -387,8 +381,9 @@ msgstr "いつものように、アプリケーションは以下の方法でパ
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:183
+#, fuzzy
 msgid "And executed with `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr ""
+msgstr "そして、 `java -jar target/quarkus-app/quarkus-run.jar` で実行しました。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:185
