--- a/l10n/po/ja_JP/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc.po
@@ -71,7 +71,7 @@ msgstr ""
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:24
 #, no-wrap
 msgid "gRPC"
-msgstr ""
+msgstr "gRPC"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:28
@@ -93,7 +93,7 @@ msgstr ""
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:34
 #, no-wrap
 msgid "Full changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:37
@@ -104,34 +104,34 @@ msgstr ""
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:38
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:41
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:43
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:45
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:46
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:47
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-08-quarkus-2-7-1-final-released.adoc:48
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
