--- a/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-09 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -202,7 +202,7 @@ msgstr "またはネイティブの場合、"
 #. type: delimited block -
 #: upstream/_versions/main/guides/container-image.adoc:115
 #, no-wrap
-msgid "quarkus.buildpack.jvm-builder-image=<native builder image>\n"
+msgid "quarkus.buildpack.native-builder-image=<native builder image>\n"
 msgstr ""
 
 #. type: Title ==
