--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -21,9 +21,9 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/mongodb.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the MongoDB Client"
-msgstr "リアクティブな MongoDB クライアント"
+msgstr "MongoDB クライアントの利用"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:10
@@ -44,7 +44,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:17
 msgid "MongoDB installed or Docker installed"
-msgstr "MongoDBがインストールされているか、Dockerがインストールされているか"
+msgstr "MongoDBがインストールされているか、Dockerがインストールされている"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:18
