--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-token-state-manager.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-token-state-manager.adoc.po
@@ -124,7 +124,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-token-state-manager.adoc:80
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-token-state-manager.adoc:52
