Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-14 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2747,7 +2747,7 @@ msgid ""
 "        \"app.kubernetes.io/name\" : \"test-quarkus-app\",\n"
 "        \"app.kubernetes.io/version\" : \"1.0.0-SNAPSHOT\"\n"
 "      },\n"
-"      \"name\" : \"knative.\n"
+"      \"name\" : \"knative\"\n"
 "    },\n"
 "    \"spec\" : {\n"
 "      \"runLatest\" : {\n"
