--- a/l10n/po/ja_JP/_versions/main/guides/lra.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/lra.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-02 02:15+0000\n"
+"POT-Creation-Date: 2022-02-14 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -252,7 +252,7 @@ msgstr ""
 #: upstream/_versions/main/guides/lra.adoc:211
 #, no-wrap
 msgid ""
-"  @LRA(LRA.Type.MANDATORY, // requires an active context before method can be executed\n"
+"  @LRA(value = LRA.Type.MANDATORY, // requires an active context before method can be executed\n"
 "       end = true) // end the LRA started by the bookTrip method\n"
 "  @Path(\"/confirm\")\n"
 "  @PUT\n"
