Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-02-15 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -48,7 +48,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkus create app my-groupId:my-artifactId \\\n"
-"    --extensions=resteasy,resteasy-jackson \\\n"
+"    --extension=resteasy,resteasy-jackson \\\n"
 "    --gradle\n"
 msgstr ""
 
