--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-dev-testing-test-config-container.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-group-dev-testing-test-config-container.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-10 02:18+0000\n"
+"POT-Creation-Date: 2022-02-15 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,3 +56,21 @@ msgstr ""
 #, no-wrap
 msgid "string"
 msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-config-group-dev-testing-test-config-container.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-config-group-dev-testing-test-config-container_quarkus.test.container.additional-exposed-ports-additional-exposed-ports]]`link:#quarkus-config-group-dev-testing-test-config-container_quarkus.test.container.additional-exposed-ports-additional-exposed-ports[quarkus.test.container.additional-exposed-ports]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set additional ports to be exposed when @QuarkusIntegration needs to launch the application in a container.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-config-group-dev-testing-test-config-container.adoc:26
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
