--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-10 02:18+0000\n"
+"POT-Creation-Date: 2022-02-15 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -392,19 +392,37 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:189
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-test-dev-testing-test-config_quarkus.test.container.additional-exposed-ports-additional-exposed-ports]]`link:#quarkus-test-dev-testing-test-config_quarkus.test.container.additional-exposed-ports-additional-exposed-ports[quarkus.test.container.additional-exposed-ports]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set additional ports to be exposed when @QuarkusIntegration needs to launch the application in a container.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:190
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:187
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:196
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:191
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:200
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:195
+#: upstream/_generated-config/main/config/quarkus-test-dev-testing-test-config.adoc:204
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
