--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
@@ -209,7 +209,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:134
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:115
