Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started.adoc.po
@@ -811,7 +811,7 @@ msgstr "パッケージングとアプリケーションの実行"
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started.adoc:458
 msgid "The application is packaged using:"
-msgstr ""
+msgstr "このアプリケーションは、以下の方法でパッケージ化されています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started.adoc:462
