Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-16 02:23+0000\n"
+"POT-Creation-Date: 2022-02-17 02:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5006,7 +5006,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:1005
 #, no-wrap
-msgid "`docker.io/apicurio/apicurio-registry-mem:2.1.5.Final`"
+msgid "`quay.io/apicurio/apicurio-registry-mem:2.2.0.Final`"
 msgstr ""
 
 #. type: Table
