--- a/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-12 02:24+0000\n"
+"POT-Creation-Date: 2022-02-17 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1404,7 +1404,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb-panache.adoc:721
-msgid "MongoDB with Panache uses the link:{mongodb-doc-root-url}/bson/pojos[PojoCodecProvider], with link:{mongodb-doc-root-url}/pojos/#pojo-support[automatic POJO support, to automatically convert your object to a BSON document."
+msgid "MongoDB with Panache uses the link:{mongodb-doc-root-url}/bson/pojos[PojoCodecProvider], with link:{mongodb-doc-root-url}/pojos/#pojo-support[automatic POJO support], to automatically convert your object to a BSON document."
 msgstr ""
 
 #. type: Plain text
