--- a/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-19 02:19+0000\n"
+"POT-Creation-Date: 2022-02-17 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -202,7 +202,7 @@ msgid ""
 "@ServiceDiscoveryAttribute(name = \"host\",\n"
 "        description = \"Host name of the service discovery server.\", required = true) // <2>\n"
 "@ServiceDiscoveryAttribute(name = \"port\",\n"
-"        description = \"Hort of the service discovery server.\", required = false)\n"
+"        description = \"Port of the service discovery server.\", required = false)\n"
 "public class AcmeServiceDiscoveryProvider // <3>\n"
 "        implements ServiceDiscoveryProvider<AcmeServiceDiscoveryProviderConfiguration> {\n"
 msgstr ""
